rust/cuvs-sys/src/cuvs_bindings.rs

#[test]
fn bindgen_test_layout_cagraIndex() {
    const UNINIT: ::std::mem::MaybeUninit<cagraIndex> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cagraIndex>(),
        16usize,
        concat!("Size of: ", stringify!(cagraIndex))
    );
    assert_eq!(
        ::std::mem::align_of::<cagraIndex>(),
        8usize,
        concat!("Alignment of ", stringify!(cagraIndex))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).addr) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cagraIndex),
            "::",
            stringify!(addr)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).dtype) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cagraIndex),
            "::",
            stringify!(dtype)
        )
    );
}
pub type cagraIndex_t = *mut cagraIndex;
extern "C" {
    #[must_use]
    #[doc = " @brief Allocate CAGRA index\n\n @param[in] index cagraIndex_t to allocate\n @return cagraError_t"]
    pub fn cagraIndexCreate(index: *mut cagraIndex_t) -> cuvsError_t;
}
extern "C" {
    #[must_use]
    #[doc = " @brief De-allocate CAGRA index\n\n @param[in] index cagraIndex_t to de-allocate"]
    pub fn cagraIndexDestroy(index: cagraIndex_t) -> cuvsError_t;
}
extern "C" {
    #[must_use]
    #[doc = " @brief Build a CAGRA index with a `DLManagedTensor` which has underlying\n        `DLDeviceType` equal to `kDLCUDA`, `kDLCUDAHost`, `kDLCUDAManaged`,\n        or `kDLCPU`. Also, acceptable underlying types are:\n        1. `kDLDataType.code == kDLFloat` and `kDLDataType.bits = 32`\n        2. `kDLDataType.code == kDLInt` and `kDLDataType.bits = 8`\n        3. `kDLDataType.code == kDLUInt` and `kDLDataType.bits = 8`\n\n @code {.c}\n #include <cuvs/core/c_api.h>\n #include <cuvs/neighbors/cagra_c.h>\n\n // Create cuvsResources_t\n cuvsResources_t res;\n cuvsError_t res_create_status = cuvsResourcesCreate(&res);\n\n // Assume a populated `DLManagedTensor` type here\n DLManagedTensor dataset;\n\n // Create default index params\n cuvsCagraIndexParams_t params;\n cuvsError_t params_create_status = cuvsCagraIndexParamsCreate(&params);\n\n // Create CAGRA index\n cagraIndex_t index;\n cuvsError_t index_create_status = cagraIndexCreate(&index);\n\n // Build the CAGRA Index\n cuvsError_t build_status = cagraBuild(res, params, &dataset, index);\n\n // de-allocate `params`, `index` and `res`\n cuvsError_t params_destroy_status = cuvsCagraIndexParamsDestroy(params);\n cuvsError_t index_destroy_status = cagraIndexDestroy(index);\n cuvsError_t res_destroy_status = cuvsResourcesDestroy(res);\n @endcode\n\n @param[in] res cuvsResources_t opaque C handle\n @param[in] params cuvsCagraIndexParams_t used to build CAGRA index\n @param[in] dataset DLManagedTensor* training dataset\n @param[out] index cagraIndex_t Newly built CAGRA index\n @return cuvsError_t"]
    pub fn cagraBuild(
        res: cuvsResources_t,
        params: cuvsCagraIndexParams_t,
        dataset: *mut DLManagedTensor,
        index: cagraIndex_t,
    ) -> cuvsError_t;
}
extern "C" {
    #[must_use]
    #[doc = " @brief Search a CAGRA index with a `DLManagedTensor` which has underlying\n        `DLDeviceType` equal to `kDLCUDA`, `kDLCUDAHost`, `kDLCUDAManaged`.\n        It is also important to note that the CAGRA Index must have been built\n        with the same type of `queries`, such that `index.dtype.code ==\n queries.dl_tensor.dtype.code` Types for input are:\n        1. `queries`: kDLDataType.code == kDLFloat` and `kDLDataType.bits = 32`\n        2. `neighbors`: `kDLDataType.code == kDLUInt` and `kDLDataType.bits = 32`\n        3. `distances`: `kDLDataType.code == kDLFloat` and `kDLDataType.bits = 32`\n\n @code {.c}\n #include <cuvs/core/c_api.h>\n #include <cuvs/neighbors/cagra_c.h>\n\n // Create cuvsResources_t\n cuvsResources_t res;\n cuvsError_t res_create_status = cuvsResourcesCreate(&res);\n\n // Assume a populated `DLManagedTensor` type here\n DLManagedTensor dataset;\n DLManagedTensor queries;\n DLManagedTensor neighbors;\n\n // Create default search params\n cuvsCagraSearchParams_t params;\n cuvsError_t params_create_status = cuvsCagraSearchParamsCreate(&params);\n\n // Search the `index` built using `cagraBuild`\n cuvsError_t search_status = cagraSearch(res, params, index, queries, neighbors, distances);\n\n // de-allocate `params` and `res`\n cuvsError_t params_destroy_status = cuvsCagraSearchParamsDestroy(params);\n cuvsError_t res_destroy_status = cuvsResourcesDestroy(res);\n @endcode\n\n @param[in] res cuvsResources_t opaque C handle\n @param[in] params cuvsCagraSearchParams_t used to search CAGRA index\n @param[in] index cagraIndex which has been returned by `cagraBuild`\n @param[in] queries DLManagedTensor* queries dataset to search\n @param[out] neighbors DLManagedTensor* output `k` neighbors for queries\n @param[out] distances DLManagedTensor* output `k` distances for queries"]
    pub fn cagraSearch(
        res: cuvsResources_t,
        params: cuvsCagraSearchParams_t,
        index: cagraIndex_t,
        queries: *mut DLManagedTensor,
        neighbors: *mut DLManagedTensor,
        distances: *mut DLManagedTensor,
    ) -> cuvsError_t;
}
